--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello</p>
+    <header>
+        <a href="/index.html">WebStudio</a>
+        <nav>
+            <ul>
+                
+                <li><a href="/studio.html">Студия</a></li>
+                <li><a href="/portfolio.html">Портфолио</a></li>
+                <li><a href="/contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </header>
 </body>
 </html>
