--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html">WebStudio</a>
-        <nav>
-            <div><a href="/studio.html">Студия</a></div>
-            <div><a href="/portfolio.html">Портфолио</a></div>
-            <div><a href="/contacts.html">Контакты</a></div>
+        <a href="/index.html" class="Webstudio"><span class="web">Web</span>Studio</a>
+        <nav class="navigation">
+            <div><a href="/studio.html" class="navigation_link">Студия</a></div>
+            <div><a href="/portfolio.html" class="navigation_link">Портфолио</a></div>
+            <div><a href="/contacts.html" class="navigation_link">Контакты</a></div>
             
         </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -21,11 +21,11 @@
     </header>
     <main>
         <section class="bussines">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1 class="bussines_h1">Эффективные решения <br> для вашего бизнеса</h1>
+            <button type="submit" class="button">Заказать услугу</button>
             
-            <button>Заказать услугу</button>
         </section>
-        <section>
+        <section class="bussines_advantages">
             <div>
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -45,27 +45,27 @@
         </section>
         <section>
             <h3>Чем мы занимаемся</h3>
-            <img src="/img/image.jpg" alt="picture1">
-            <img src="/img/image (1).jpg" alt="picture2">
-            <img src="/img/image (2).jpg" alt="picture3">
+            <img src="/images/image.jpg" alt="picture1">
+            <img src="/images/image (1).jpg" alt="picture2">
+            <img src="/images/image (2).jpg" alt="picture3">
         </section>
         <section>
             <h3>Наша команда</h3>
             <div class="command">
                 <div class="photo_command">
-                    <img  src="/img/com_1.jpg" alt="pic4">
+                    <img  src="/images/com_1.jpg" alt="pic4">
                     <h4>Игорь Демьяненко</h4>
                 </div>
                 <div class="photo_command">
-                    <img  src="/img/com_2.jpg" alt="pic5">
+                    <img  src="/images/com_2.jpg" alt="pic5">
                     <h4>Ольга Репина</h4>
                 </div>
                 <div class="photo_command">
-                    <img  src="/img/com_3.jpg" alt="pic6">
+                    <img  src="/images/com_3.jpg" alt="pic6">
                     <h4>Николай Тарасов</h4>
                 </div>
                 <div class="photo_command">
-                    <img src="/img/com_4.jpg" alt="pic7">
+                    <img src="/images/com_4.jpg" alt="pic7">
                     <h4>Михаил Ермаков</h4>
                 </div>
             </div>
@@ -77,7 +77,7 @@
 
     </main>
     <footer class="footer">
-        <a href="/index.html">WebStudio</a>
+        <a href="/index.html"><span class="web">Web</span>Studio</a>
         <ul>
             <li>г. Киев, пр-т Леси Украинки, 26</li>
             <li>info@example.com</li>
