--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
         </section>
         <section class="bussines_advantages">
             <div>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="bussines_advantages_h">Внимание к деталям</h3>
+                <p class="bussines_advantages_p">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </div>
             <div>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="bussines_advantages_h">Пунктуальность</h3>
+                <p class="bussines_advantages_p">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </div>
             <div>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="bussines_advantages_h">Планирование</h3>
+                <p class="bussines_advantages_p">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </div>
             <div>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="bussines_advantages_h">Современные технологии</h3>
+                <p class="bussines_advantages_p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </div>
         </section>
         <section>
