--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <section>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="/images/image.jpg" alt="Зображення: picture1" width="370"></li>
-                    <li><img src="/images/image (1).jpg" alt="Зображення: picture2" width="370"></li>
-                    <li><img src="/images/image (2).jpg" alt="Зображення: picture3" width="370"></li>
+                    <li><img src="./images/image.jpg" alt="Зображення: picture1" width="370"></li>
+                    <li><img src="./images/image (1).jpg" alt="Зображення: picture2" width="370"></li>
+                    <li><img src="./images/image (2).jpg" alt="Зображення: picture3" width="370"></li>
                 </ul>     
                
             </section>
@@ -67,19 +67,19 @@
                 <h2>Наша команда</h2>
                 <div class="command">
                     <div class="photo_command">
-                        <img src="/images/com_1.jpg" alt="Зображення: Игорь Демьяненко" width="270">
+                        <img src="./images/com_1.jpg" alt="Зображення: Игорь Демьяненко" width="270">
                         <h4>Игорь Демьяненко</h4>
                     </div>
                     <div class="photo_command">
-                        <img src="/images/com_2.jpg" alt="Зображення: Ольга Репина" width="270">
+                        <img src="./images/com_2.jpg" alt="Зображення: Ольга Репина" width="270">
                         <h4>Ольга Репина</h4>
                     </div>
                     <div class="photo_command">
-                        <img src="/images/com_3.jpg" alt="Зображення: Николай Тарасов" width="270">
+                        <img src="./images/com_3.jpg" alt="Зображення: Николай Тарасов" width="270">
                         <h4>Николай Тарасов</h4>
                     </div>
                     <div class="photo_command">
-                        <img src="/images/com_4.jpg" alt="Зображення: Михаил Ермаков" width="270">
+                        <img src="./images/com_4.jpg" alt="Зображення: Михаил Ермаков" width="270">
                         <h4>Михаил Ермаков</h4>
                     </div>
                 </div>
