--- a/index.html
+++ b/index.html
@@ -100,13 +100,20 @@
         </main>
         <footer class="footer">
             <address>
-               
+                <a href="/index.html"><span class="web">Web</span>Studio</a></li>
                 <ul>
-                    <li><a href="/index.html"><span class="web">Web</span>Studio</a></li>
-                    <li><a href="https://goo.gl/maps/CWXQesHHKoX2S1Bj6" target="_blank" rel="noreferrer noopener"></a>г. Киев, пр-т Леси Украинки, 26</li>                    
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li>
+                        <a href="https://goo.gl/maps/abKfRASXcLubcDst8" target="_blank" rel="noreferrer noopener">
+                            г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
                 </ul>
+                
             </address>            
         </footer>
     </div>
